<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ImageView
        android:id="@+id/ivPawsLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:contentDescription="@string/paws_4_adoption_logo"
        app:srcCompat="@drawable/paws4adoption_logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome_de_utilizador"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/btnRegistar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registar"
        android:onClick="onClickSignup"/>
</LinearLayout>